# Singletons

./: .gitignore  README.md  meson.build
src/Testable/: Singleton.hpp
src/ThreadSafe/: Singleton.hpp
tests/: ThreadSafeSingletonTests.cpp  meson.build
tests/TestableSingleton/: TestableSingletonTests.cpp  UserOfSingletonTests.cpp  meson.build
